changing the name file tml

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <img src="picture/selfie.jpeg" alt="aguinalda blue" class="ImgMain">
         <div>
             <h1>ELisângela Daniela Do Amaral Gila</h1>
-            <p><a href="picture/index.html">Luv u soo much</a></p>
+            <p><a href="indeex.html">Luv u soo much</a></p>
         </div>        
     </main>
 </body>
