--- a/indeex.html
+++ b/indeex.html
@@ -20,14 +20,14 @@
 
     <section id="normal">
         <p>
-            Hoje, decidi fazer-te lembrar mais uma vez o amor que sinto por tie o quão te amo em um pequeno gesto de amor. <br>
+            Hoje, decidi fazer-te lembrar mais uma vez o amor que sinto por ti e o quão te amo em um pequeno gesto de amor. <br>
             tu és para mim um amor verdadeiro e tem sido uma luz constante em minha vida. <br>
             Até aqui o Senhor nos sustentou. <br>
             Por mais rápido que as coisas tenham sido, <br>
             O Senhor não nos desamparou em nenhum minuto. <br>
             Obrigado Pai por cuidar de cada detalhe nas nossas vidas... <br>
             Por nos abençoar todos os nossos planos e por nos guiar na direção que lhe agrada. <br>
-            Obrigado pela proteção divina sobre nós e a nossa relação,o problemas existirão, mas com o Senhor seremos
+            Obrigado pela proteção divina sobre nós e a nossa relação, problemas existirão, mas com o Senhor seremos
             mais fortes!
         </p>
     </section>
@@ -112,7 +112,6 @@
             Repleto de amor, alegria e sorte, <br> 
             Pois você é, no meu universo, <br> 
             A melodia que torna a vida um corte. <br> <br>
-            Feliz aniversário, alma querida, <br> 
             Que seus sonhos se façam reais, <br> 
             E que juntos, nesta vida, <br>
             Escrevamos capítulos fenomenais.
